# pentax-timelapse

./: README.md  requirements.txt  setup.cfg
pentax_package/: camera_control.py  ptimelapse.py  s3_upload.py
